modules/gitlea/soar/ingress/ing-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  #   - hosts:
  #     - mydev.test
  #     secretName: tls-secret
  rules:
  - host: svc1.mydev.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thehive
            port:
              number: 9000
  - host: svc2.mydev.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cortex
            port:
              number: 9001
---
